--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             apt-get update
             apt-get install zip unzip
             zip -r ${SRC_APP_DIR}/publish.zip ${SRC_APP_DIR}/bin/Release
-            scp -r publish.zip ${USER_NAME}@${HOST_NAME}:${DST_APP_DIR}
+            scp publish.zip ${USER_NAME}@${HOST_NAME}:${DST_APP_DIR}
             ssh ${USER_NAME}@${HOST_NAME} "unzip ${DST_APP_DIR}/publish.zip"
 workflows:
   version: 2.1
