--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,15 +8,21 @@ jobs:
       - run:
           name: build 
           command: dotnet publish ${SRC_APP_DIR}/${SOLUSION_NAME} -c Release
+      - run: 
+          name: zip install
+          command: 
+            apt-get update \
+            apt-get install zip unzip
+      - run:
+          name: zip
+          command: zip -r ${SRC_APP_DIR}/publish.zip ${SRC_APP_DIR}/bin/Release \
       - add_ssh_keys
       - run: 
           name: deploy
-          command: 
-            apt-get update \
-            apt-get install zip unzip \
-            zip -r ${SRC_APP_DIR}/publish.zip ${SRC_APP_DIR}/bin/Release \
-            scp publish.zip ${USER_NAME}@${HOST_NAME}:${DST_APP_DIR} \
-            ssh ${USER_NAME}@${HOST_NAME} "unzip ${DST_APP_DIR}/publish.zip" \
+          command: scp publish.zip ${USER_NAME}@${HOST_NAME}:${DST_APP_DIR} \
+      - run:
+          name: unzip
+          command: ssh ${USER_NAME}@${HOST_NAME} "unzip ${DST_APP_DIR}/publish.zip" \
 workflows:
   version: 2.1
   buildAll:
