--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: dotnet publish ${PROJECT_PATH} -c Release
       - persist_to_workspace:
           root: '.'
-          paths: ${BIN_DIR}/*
+          paths: Hello/bin/Release/netcoreapp3.1/publish/*
   
   deploy:
     machine:
