--- a/.devcontainer/web/Dockerfile
+++ b/.devcontainer/web/Dockerfile
@@ -1,5 +1,6 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1
 
+WORKDIR /dotnet-app
 RUN apt-get update \
     && apt-get install -y git \
     && apt-get autoremove -y \
