--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     container_name: dotnet_web
     ports:
       - "8080:8080"
+    environment:
+      DB_CONNECTION_STRING: "server=172.22.0.2;port=3306;uid=root;pwd=password;database=asp_net_sample"
     volumes:
       - ../:/dotnet-app
     command: /bin/bash -c "while sleep 1000; do :; done"
