--- a/Hello/Hello.csproj
+++ b/Hello/Hello.csproj
@@ -7,5 +7,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.21"/>
+    <PackageReference Include="NEST" Version="7.9.0"/>
   </ItemGroup>
 </Project>
