--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -32,6 +32,19 @@ services:
       - 5044:5044
     networks:
       - esnet
+  
+  dotnet_filebeat:
+    mem_limit: 64m
+    build: 
+      context: .
+      dockerfile: ./filebeat/Dockerfile
+    container_name: dotnet_filebeat
+    volumes:
+      - ../Hello/logs:/logs
+    links:
+      - dotnet_elk:dotnet_elk
+    networks:
+      - esnet
 
   dotnet_web:
     build:
@@ -41,12 +54,15 @@ services:
     ports:
       - "8080:8080"
     environment:
-      DB_CONNECTION_STRING: "server=172.23.0.5;port=3306;uid=root;pwd=password;database=asp_net_sample"
-      ELASTIC_SEARCH_SERVER: "http://172.23.0.3:9200"
+      DB_CONNECTION_STRING: "server=dotnet_db;port=3306;uid=root;pwd=password;database=asp_net_sample"
+      ELASTIC_SEARCH_SERVER: "http://dotnet_elk:9200"
     volumes:
       - ../:/dotnet-app
     command: /bin/bash -c "while sleep 1000; do :; done"
     stdin_open: true
+    links:
+      - dotnet_elk:dotnet_elk
+      - dotnet_db:dotnet_db 
     networks:
       - esnet
 
