--- a/.devcontainer/elk/Dockerfile
+++ b/.devcontainer/elk/Dockerfile
@@ -1,3 +1,4 @@
 FROM sebp/elk:latest
 ENV PATH $PATH:/opt/elasticsearch/bin
 RUN elasticsearch-plugin install analysis-kuromoji
+COPY ./elk/logstash.conf /etc/logstash/conf.d/logstash.conf
