--- a/Hello/Hello.csproj
+++ b/Hello/Hello.csproj
@@ -8,5 +8,7 @@
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.21"/>
     <PackageReference Include="NEST" Version="7.9.0"/>
+    <PackageReference Include="NLog" Version="4.7.5"/>
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3"/>
   </ItemGroup>
 </Project>
