--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - "db_data:/var/lib/mysql"
       - "./db/my.conf:/etc/mysql/my.conf"
+      - "./db/init:/docker-entrypoint-initdb.d"
     command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci --skip-character-set-client-handshake
 
   dotnet_elk:
